--- a/css/promo_style.css
+++ b/css/promo_style.css
@@ -1,493 +1,36 @@
-body {
-  font-family: 'Outfit', sans-serif;
-  font-family: 'Quicksand', sans-serif;
+.img {
+    width: 581px;
+    object-fit: cover;
+    border-radius: 20px;
 }
 
-.promo {
-  background-color: #ffffff;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 100%;
-  overflow: auto;
+.pic {
+    width: 900px;
+    height: 500px;
+    border-radius: 20px;
 }
 
- .div {
-  background-color: #ffffff;
-  width: 1440px;
-  height: 2150px;
-  position: relative;
+.text-wrapper-10 {
+    font-weight: 400;
+    color: #272042;
+    font-size: 1rem;
+    text-align: center;
+    letter-spacing: 0;
+    line-height: 30px;
 }
 
- .footer {
-  position: absolute;
-  width: 1440px;
-  height: 252px;
-  top: 1850px;
-  left: 0;
+@media (max-width: 1025px) {
+    .img, .pic {
+        width: auto;
+        height: auto;
+        border-radius: auto;
+    }
 }
 
- .footer-2 {
-  position: absolute;
-  width: 1227px;
-  height: 182px;
-  top: 70px;
-  left: 113px;
-}
-
- .menu {
-  width: 297px;
-  height: 182px;
-  left: 304px;
-  position: absolute;
-  top: 0;
-}
-
- .text-wrapper {
-  position: absolute;
-  width: 287px;
-  top: 0;
-  left: 0;
-  font-weight: 600;
-  color: #272042;
-  font-size: 22px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
- .text-wrapper-2 {
-  position: absolute;
-  width: 287px;
-  top: 48px;
-  left: 0;
-  font-weight: 400;
-  color: #8b8ba5;
-  font-size: 18px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
- .text-wrapper-3 {
-  position: absolute;
-  width: 287px;
-  top: 122px;
-  left: 0;
-  font-weight: 400;
-  color: #8b8ba5;
-  font-size: 18px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
- .text-wrapper-4 {
-  position: absolute;
-  width: 287px;
-  top: 85px;
-  left: 0;
-  font-weight: 400;
-  color: #272042;
-  font-size: 18px;
-  letter-spacing: 0;
-  line-height: normal;
-  text-decoration: underline;
-}
-
- .text-wrapper-5 {
-  position: absolute;
-  width: 287px;
-  top: 159px;
-  left: 0;
-  font-weight: 400;
-  color: #8b8ba5;
-  font-size: 18px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
- .logo {
-  width: 133px;
-  height: 145px;
-  top: 14px;
-  position: absolute;
-  left: 0;
-}
-
- .text-wrapper-6 {
-  position: absolute;
-  width: 129px;
-  top: 40px;
-  left: 0;
-  font-weight: 500;
-  color: #272042;
-  font-size: 25px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
- .text-wrapper-7 {
-  top: 0;
-  position: absolute;
-  left: 0;
-  font-weight: 500;
-  color: #272042;
-  font-size: 28px;
-  letter-spacing: 0;
-  line-height: normal;
-  white-space: nowrap;
-}
-
- .menu-2 {
-  width: 297px;
-  height: 182px;
-  left: 622px;
-  position: absolute;
-  top: 0;
-}
-
- .text-wrapper-8 {
-  position: absolute;
-  width: 287px;
-  top: 85px;
-  left: 0;
-  font-weight: 400;
-  color: #8b8ba5;
-  font-size: 18px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
- .menu-3 {
-  width: 295px;
-  height: 145px;
-  left: 940px;
-  position: absolute;
-  top: 0;
-}
-
- .line {
-  position: absolute;
-  width: 1440px;
-  height: 1px;
-  top: -1px;
-  left: 0;
-  object-fit: cover;
-}
-
- .nav-bar {
-  position: absolute;
-  width: 1240px;
-  height: 50px;
-  top: 50px;
-  left: 100px;
-}
-
- .logo-2 {
-  width: 368px;
-  height: 35px;
-  top: 7px;
-  position: absolute;
-  left: 0;
-}
-
- .logo-linda {
-  position: absolute;
-  top: 0;
-  left: 62px;
-  font-weight: 500;
-  color: #272042;
-  font-size: 20px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
- .text-wrapper-13 {
-  top: 3px;
-  position: absolute;
-  left: 0;
-  font-weight: 500;
-  color: #272042;
-  font-size: 28px;
-  letter-spacing: 0;
-  line-height: normal;
-  white-space: nowrap;
-}
-
- .group {
-  position: absolute;
-  width: 485px;
-  height: 27px;
-  top: 13px;
-  left: 541px;
-}
-
- ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  display: inline-flex;
-  align-items: flex-start;
-  gap: 72px;
-  position: absolute;
-  margin-left: 100px;
-}
-
- li {
-  float: left;
-}
-
- li a {
-  color: #8B8BA5;
-  text-align: center;
-  text-decoration: none;
-}
-
- li a:hover:not(.active) {
-  color: #FBE0DC;
-}
-
-.promo .active {
-  color: #272042;
-}
-
- li a:hover, li a.active {
-  color: #FBE0DC;
-}
-
- .text-wrapper-14 {
-  position: relative;
-  width: fit-content;
-  margin-top: -1px;
-  font-weight: 500;
-  color: #8b8ba5;
-  font-size: 18px;
-  text-align: right;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
- .text-wrapper-15 {
-  position: relative;
-  width: fit-content;
-  margin-top: -1px;
-  font-weight: 700;
-  color: #272042;
-  font-size: 18px;
-  text-align: right;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-/* Content Promo */
- .cek-promo-disini {
-  position: absolute;
-  width: 1260px;
-  height: 670px;
-  top: 146px;
-  left: 90px;
-}
-
- .katalog-menu {
-  position: relative;
-  height: 670px;
-}
-
- .frame-2 {
-  display: inline-flex;
-  align-items: flex-start;
-  gap: 100px;
-  position: absolute;
-  top: 148px;
-  left: 0;
-}
-
- .div-2 {
-  position: relative;
-  width: 581.32px;
-  height: 464px;
-}
-
- .frame-3 {
-  top: 414px;
-  left: 35px;
-  display: inline-flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  position: absolute;
-}
-
-/* .trapezoid-container {
-  width: 581px;
-  overflow: hidden;
-  position: relative;
-  border-radius: 85px 85px 50px 50px;
-}
-
- .trapezoid {
-  width: 100%;
-  height: 373px;
-  clip-path: polygon(0% 0%, 100% 0%, 95% 100%, 5% 100%);
-  overflow: hidden;
-}*/
-
- .img {
-  width: 581px;
-  object-fit: cover;
-  border-radius: 20px;
-}
-
- .div-wrapper {
-  position: absolute;
-  width: 329px;
-  height: 90px;
-  top: 28px;
-  left: 8px;
-}
-
- .text-wrapper-12 {
-  position: absolute;
-  top: 9px;
-  left: 10px;
-  font-weight: 700;
-  color: #272042;
-  font-size: 40px;
-  letter-spacing: 0;
-  line-height: 70px;
-  white-space: nowrap;
-}
-
-.button {
-  background-color: #F7C531;
-  color: #272042;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-family: 'Quicksand', sans-serif;
-  font-size: 16px;
-  margin: 4px 0px;
-  cursor: pointer;
-  border: none;
-  border-radius: 30px 30px 15px 15px;
-}
-
-.button:hover {
-  background-color: #D6AC25;
-}
-
-.button:active {
-  background-color: #AA8E1C;
-}
-
- .overlap {
-  position: absolute;
-  width: 992px;
-  height: 985px;
-  top: 850px;
-  left: 224px;
-}
-
- -besar-besaran {
-  position: absolute;
-  width: 954px;
-  height: 985px;
-  top: 0;
-  left: 0;
-}
-
- .p {
-  position: absolute;
-  top: -10px;
-  left: 50%;
-  transform: translate(-50%);
-  font-weight: 700;
-  color: #272042;
-  font-size: 40px;
-  text-align: center;
-  letter-spacing: 0;
-  line-height: 70px;
-  white-space: nowrap;
-}
-
- .frame {
-  top: 830px;
-  left: 367px;
-  display: inline-flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  position: absolute;
-}
-
- .rectangle {
-  position: relative;
-  width: 259px;
-  height: 50px;
-}
-
- .text-wrapper-9 {
-  position: absolute;
-  top: 12px;
-  left: 32px;
-  font-weight: 500;
-  color: #272042;
-  font-size: 18px;
-  text-align: center;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
- .pic {
-  width: 900px;
-  height: 500px;
-  position: absolute;
-  top: 200px;
-  left: 50%;
-  transform: translateX(-50%);
-  border-radius: 20px;
-}
-
- .text-wrapper-10 {
-  position: absolute;
-  width: 700px;
-  top: 90px;
-  left: 50%;
-  transform: translateX(-50%);
-  font-weight: 400;
-  color: #272042;
-  font-size: 20px;
-  text-align: center;
-  letter-spacing: 0;
-  line-height: 30px;
-}
-
- .text-wrapper-11 {
-  position: absolute;
-  width: 700px;
-  top: 710px;
-  left: 50%;
-  transform: translateX(-50%);
-  font-weight: 400;
-  color: #272042;
-  font-size: 20px;
-  text-align: center;
-  letter-spacing: 0;
-  line-height: 30px;
-}
-
- .cek-promo-disini {
-  position: absolute;
-  width: 1260px;
-  height: 670px;
-  top: 146px;
-  left: 90px;
-}
-
-@media only screen and (max-width: 620px) {
-  .promo {
-    width: 100%;
-  }
+@media (max-width: 1366px) {
+    .img, .pic {
+        width: auto;
+        height: auto;
+        border-radius: 10px;
+    }
 }
